--- a/ConsoleApp5/ConsoleApp5.csproj
+++ b/ConsoleApp5/ConsoleApp5.csproj
@@ -8,12 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Delegates\GeometryUtils.cs" />
+    <Compile Remove="Delegates\NumberFilter.cs" />
     <Compile Remove="Struct\DecimalNumber.cs" />
     <Compile Remove="Struct\RgbColor.cs" />
     <Compile Remove="Struct\Vector.cs" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Delegates\GeometryUtils.cs" />
+    <None Include="Delegates\NumberFilter.cs" />
     <None Include="Struct\DecimalNumber.cs" />
     <None Include="Struct\RgbColor.cs" />
     <None Include="Struct\Vector.cs" />
